Use Java 11, replace tycho with bnd, upgrades and cleanup
* Use Java 11 as compiler source and target
* Replace tycho with bnd
* Use DS annotations
* Upgrade Maven plug-ins
* Upgrade dependencies
* Set project version to 3.0.0-SNAPSHOT
* Ignore IDE generated files in .gitignore
* Remove Eclipse generated files
* Add sortpom-maven-plugin
* Sort and cleanup POMs

Signed-off-by: Wouter Born <github@maindrain.net>